# deep-research-strands

./: .dockerignore  .gitignore  Dockerfile  INTERLEAVED_THINKING.md  MCP_PROMPTS.md  MCP_SKILL_GUIDE.md  README.md  custom_structure.txt  docker-compose.yml  library_readme_structure.txt  main.py  mcp_server.py  practical_code_editor_prompt.txt  pyproject.toml  test_advanced_evaluation.py  test_nci_evaluation.py
data/eval_datasets/: README.md  nci_expanded_demo.json  nci_synthetic_demo.json
docs/: eval-guide.md  nci-scoring-system.md
src/agents/: planning_agent.py  search_agent.py  supervisor.py
src/eval/: __init__.py  advanced_metrics.py  cli.py  config.py  dataset_collector.py  dataset_expansion.py  evaluator.py  metrics.py  report_generator.py  visualizer.py
src/tools/: exa_tool.py  nci_scoring_tool.py  planning_tool.py  search_tool.py
src/utils/: config.py
